--- a/vechno_student.html
+++ b/vechno_student.html
@@ -3,10 +3,11 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
+	<title>Юрий Визбор. Вечно студенческие.</title>
 </head>
 
 <body  width="viewport">
-	<h1 align="center" id="top">Юрий Визбор. Вечно студенческие</h1>
+	<h1 align="center" id="top">Юрий Визбор. Вечно студенческие.</h1>
 	<div align="justify">
 		<p>Когда пишут или говорят о студенческих песнях, многие
 			впадают в ошибку - путают студенческие песни с туристскими.
