--- a/VIZBOR.html
+++ b/VIZBOR.html
@@ -2,6 +2,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width" />
+	<title>Юриф Визбор</title>
 </head>
 <body>
 	<h1>Юриф Визбор</h1>
