--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,39 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <div class="container main-nav">
+      <ul>
+        <li>Menu item 1</li>
+        <li>Menu item 2</li>
+        <li>Menu item 3</li>
+        <li>Menu item 4</li>
+        <li>Menu item 5</li>
+      </ul>
+    </div>
+    <div class="container sub-menu">
+      <ul>
+        <li>sub menu item 1</li>
+        <li>sub menu item 1</li>
+        <li>sub menu item 1</li>
+      </ul>
+    </div>
+    <div class="container blocks">
+      <span>Block</span>
+      <span>Block</span>
+      <span>Block</span>
+      <p>Paragraph</p>
+      <p>Paragraph</p>
+      <p>Paragraph</p>
+    </div>
+    <div class="container">
+      <span>Block</span>
+      <span>Block</span>
+      <span>Block</span>
+    </div>
+    <div class="container inline">
+      <p>Paragraph</p>
+      <p>Paragraph</p>
+      <p>Paragraph</p>
+    </div>
   </body>
 </html>
-
-
-
-
