--- a/src/CHILDBOOK.html
+++ b/src/CHILDBOOK.html
@@ -22,24 +22,23 @@
     </div>
     <div class="container">
         <img src="./img/train.jpg" alt="train">
-        <p>Мне купили <span class="bold">Паравозик,</span></p>
-        <p>сразу два вагона возит.
-        <p>Я включу его, и он</p>
-        <p>За собой везет вагон.</p>
-        <p>Вот бы мне в нём
-            прокатиться.</p>
-        <p>Только жаль - не поместиться.</p>
-       
+        <p>Мне купили <span class="bold">Паравозик,</span><br>
+            сразу два вагона возит.<br>
+            Я включу его, и он<br>
+            За собой везет вагон.<br>
+            Вот бы мне в нём
+            прокатиться.<br>
+            Только жаль - не поместиться.</p>
+
     </div>
     <div class="container">
         <img src="./img/politra.jpg" alt="Politra">
         <p>
-            <p>Нарисую я в альбоме</p> 
-            <p><span class="italic">Голубое</span> море,</p>
-            <p><span class="italic">Белый</span> парус над волною </p>
-            <p>Бьется на просторе.</p>
+        Нарисую я в альбоме<br>
+        <span class="italic">Голубое</span> море,<br>
+        <span class="italic">Белый</span> парус над волною <br>
+        Бьется на просторе.<br>
         </p>
-
     </div>
 </body>
 
