added hometask descr

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
+    <h1>Home task 1.</h1>
+    <p>In this task? we've studied blocks and inline HTML elements and
+        tries to use them for the first time.
+    </p>
+    
     <h2>Links:</h2>
     <div>
         <p><a href="whatever_newtab" target="_blank">This link opens in the new tab</a></p>
