--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,33 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./main.scss">
-    <title>First project</title>
-    <script src="./js/main.js" defer></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./main.scss">
+  <title>First project</title>
+  <script src="./js/main.js" defer></script>
+</head>
+
+<body>
+  <header class="container">
+    <div>
+      header
+    </div>
+  </header>
+  <div class="banner">
+    <div class="container">
+      banner
+    </div>
+  </div>
+  <main class="container">
+    main content
+  </main>
+  <footer>
+    <div class="container">
+      footer
+    </div>
+  </footer>
+</body>
+
 </html>
-
-
-
-
