--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,38 @@
 
 <body>
   <header class="container">
-    <div>
-      header
+    <div class="wrapper_logo">
+      <img src="./img/Rabbit-logo.png" alt="Logo">
+      <div class="logo_text">
+        <p>orange</p>
+        <p>rabbit</p>
+      </div>
     </div>
+
+    <nav>
+      <a class="nav_item" href="">
+        <img src="./img/home-icon.png" alt="Home">
+        <p>home</p>
+      </a>
+      <a class="nav_item" href="">
+        <img src="./img/about-icon.png" alt="about">
+        <p>about</p>
+      </a>
+      <a class="nav_item" href="">
+        <img src="./img/work-icon.png" alt="work">
+        <p>work</p>
+      </a>
+      <a class="nav_item" href="">
+        <img src="./img/blog-icon.png" alt="blog">
+        <p>blog</p>
+      </a>
+      <a class="nav_item" href="">
+        <img src="./img/contact-icon.png" alt="contact">
+        <p>contact</p>
+      </a>
+    </nav>
   </header>
+  <!--   
   <div class="banner">
     <div class="container">
       banner
@@ -28,6 +56,7 @@
       footer
     </div>
   </footer>
+-->
 </body>
 
 </html>
