--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="./main.scss">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <title>First project</title>
   <script src="./js/main.js" defer></script>
 </head>
@@ -42,16 +44,19 @@
       </a>
     </nav>
   </header>
-  <!--   
+
   <div class="banner">
     <div class="container">
-      banner
+      <div class="banner_text">
+        <p>do you like rabbits?</p>
+        <p>do you like oranges?</p>
+      </div>
     </div>
-  </div>
+     </div>
   <main class="container">
-    main content
+    main content 215px
   </main>
-  <footer>
+  <!--  <footer>
     <div class="container">
       footer
     </div>
