--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,47 @@
         <p>do you like oranges?</p>
       </div>
     </div>
-     </div>
+  </div>
   <main class="container">
-    main content 215px
+    <div class="wrapper_column">
+      <div class="column">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facere qui repellat magni iste possimus accusantium
+          sint id debitis dignissimos voluptate quia, 
+          vel similique quo tempora optio hic voluptatem unde asperiores.
+        </p>
+        <a>read more...</a>
+      </div>
+      <div class="column">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facere qui repellat magni iste possimus accusantium
+          sint id debitis dignissimos voluptate quia, 
+          vel similique quo tempora optio hic voluptatem unde asperiores.
+        </p>
+        <a href=""> read more...</a>
+      </div>
+      <div class="column">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facere qui repellat magni iste possimus accusantium
+          sint id debitis dignissimos voluptate quia, 
+          vel similique quo tempora optio hic voluptatem unde asperiores.
+        </p>
+        <a href="">read more...</a>
+      </div>
+      <div class="column">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Facere qui repellat magni iste possimus accusantium
+          sint id debitis dignissimos voluptate quia, 
+          vel similique quo tempora optio hic voluptatem unde asperiores.
+        </p>
+        <a href="">read more...</a>
+      </div>
+    </div>
+
   </main>
   <!--  <footer>
     <div class="container">
