--- a/src/index.html
+++ b/src/index.html
@@ -57,42 +57,90 @@
     <div class="wrapper_column">
       <div class="column">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia, 
+          sint id debitis dignissimos voluptate quia,
           vel similique quo tempora optio hic voluptatem unde asperiores.
         </p>
         <a>read more...</a>
       </div>
       <div class="column">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia, 
+          sint id debitis dignissimos voluptate quia,
           vel similique quo tempora optio hic voluptatem unde asperiores.
         </p>
         <a href=""> read more...</a>
       </div>
       <div class="column">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia, 
+          sint id debitis dignissimos voluptate quia,
           vel similique quo tempora optio hic voluptatem unde asperiores.
         </p>
         <a href="">read more...</a>
       </div>
       <div class="column">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia, 
+          sint id debitis dignissimos voluptate quia,
           vel similique quo tempora optio hic voluptatem unde asperiores.
         </p>
         <a href="">read more...</a>
       </div>
     </div>
+    <div class="wrapper_team">
+      <div class="title_name">
+        <p>Meet the team</p>
+      </div>
+      <div class="wrapper_column">
 
+        <div class="column_item">
+          <div class="title_column">
+            <p class="pers_name">Hoof</p>
+            <p class="pers_position">- Lead Designer</p>
+          </div>
+          <img src="./img/horse.png" alt="Lead Designer">
+          <p class="text_item">
+            Hoof is our most talanted designer.
+            However he's not the talkative type and I
+            would advise not getting on the wrong
+            side of him.
+          </p>
+        </div>
+
+        <div class="column_item">
+          <div class="title_column">
+            <p class="pers_name">Nibs</p>
+            <p class="pers_position">- CEO/Director</p>
+          </div>
+          <img src="./img/rabbit.png" alt="CEO/Director">
+          <p class="text_item">
+            Nibs is our go to woman. She's the
+            ceo/director of orange rabbit and runs
+            fast when she has too.
+          </p>
+        </div>
+
+        <div class="column_item">
+          <div class="title_column">
+            <p class="pers_name">Squawk</p>
+            <p class="pers_position">- Developer</p>
+          </div>
+          <img src="./img/squawk.png" alt="Developer">
+          <p class="text_item">
+            Squawk is no social bunny. But when it
+            comes to programming he stands out
+            from the crowd.
+          </p>
+        </div>
+
+
+      </div>
+    </div>
   </main>
   <!--  <footer>
     <div class="container">
