--- a/src/index.html
+++ b/src/index.html
@@ -92,10 +92,8 @@
         <a href="">read more...</a>
       </div>
     </div>
-    <div class="wrapper_team">
-      <div class="title_name">
-        <p>Meet the team</p>
-      </div>
+    <div class="wrapper_team"> 
+        <p class="title_name">Meet the team</p>
       <div class="wrapper_column">
 
         <div class="column_item">
@@ -141,13 +139,36 @@
 
       </div>
     </div>
+    <div class="wrapper_form">
+  
+        <p class="title_name"> Send us a message...</p>
+      
+      <form>
+        <div class=form_item>
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="user_name">
+        </div>
+        <div class=form_item>
+          <label for="Email">Email:</label>
+          <input type="email" name="email">
+        </div>
+        <div class=form_item>
+          <label for="Message">Message:</label>
+          <input type="text" name="message">
+        </div>
+        <button>
+          Submit
+        </button>
+      </form>
+    </div>
   </main>
-  <!--  <footer>
+ <footer>
     <div class="container">
-      footer
+      <p>COPYRIGHT ORANGE RABBIT - 
+        DESIGNED BY JAKE BHATT. </p>
     </div>
   </footer>
--->
+
 </body>
 
 </html>
