--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
   </div>
   <main class="container">
     <div class="wrapper_column">
-      <div class="column">
+      <div class="article-column">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
@@ -64,7 +64,7 @@
         </p>
         <a>read more...</a>
       </div>
-      <div class="column">
+      <div class="article-column">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
@@ -73,7 +73,7 @@
         </p>
         <a href=""> read more...</a>
       </div>
-      <div class="column">
+      <div class="article-column">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
@@ -82,7 +82,7 @@
         </p>
         <a href="">read more...</a>
       </div>
-      <div class="column">
+      <div class="article-column">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Facere qui repellat magni iste possimus accusantium
