--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <a href="">read more...</a>
       </div>
     </div>
-    <div class="wrapper_team"> 
+    <section class="section"> 
         <p class="title_name">Meet the team</p>
       <div class="wrapper_column">
 
@@ -139,7 +139,7 @@
 
       </div>
     </div>
-    <div class="wrapper_form">
+    <section class="section">
   
         <p class="title_name"> Send us a message...</p>
       
