--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,19 @@
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <main class="container">
+      <div class="wrapper__aquamarine"></div>
+      <div class="wrapper__flex">
+        <div class="green"></div>
+        <div class="green"></div>
+      </div>
+      <div class="wrapper_tree-columns">
+        <div class="red"></div>
+        <div class="blue"></div>
+        <div class="yellow"></div>
+      </div>
+      <footer></footer>
+    </main>
   </body>
 </html>
 
