--- a/src/index.html
+++ b/src/index.html
@@ -55,42 +55,11 @@
   </div>
   <main class="container">
     <div class="wrapper_column">
-      <div class="article-column">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia,
-          vel similique quo tempora optio hic voluptatem unde asperiores.
-        </p>
-        <a>read more...</a>
-      </div>
-      <div class="article-column">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia,
-          vel similique quo tempora optio hic voluptatem unde asperiores.
-        </p>
-        <a href=""> read more...</a>
-      </div>
-      <div class="article-column">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia,
-          vel similique quo tempora optio hic voluptatem unde asperiores.
-        </p>
-        <a href="">read more...</a>
-      </div>
-      <div class="article-column">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Facere qui repellat magni iste possimus accusantium
-          sint id debitis dignissimos voluptate quia,
-          vel similique quo tempora optio hic voluptatem unde asperiores.
-        </p>
-        <a href="">read more...</a>
-      </div>
+      @@include('./partials/article/_article.html', {"articleText":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis eveniet sit distinctio. Ab iste velit alias ratione accusantium quidem doloremque illum praesentium quos quaerat, distinctio sequi placeat? Ducimus, laboriosam dolore?"})
+      @@include('./partials/article/_article.html', {"articleText":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis eveniet sit distinctio. Ab iste velit alias ratione accusantium quidem doloremque illum praesentium quos quaerat, distinctio sequi placeat? Ducimus, laboriosam dolore?"})
+      @@include('./partials/article/_article.html', {"articleText":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis eveniet sit distinctio. Ab iste velit alias ratione accusantium quidem doloremque illum praesentium quos quaerat, distinctio sequi placeat? Ducimus, laboriosam dolore?"})
+      @@include('./partials/article/_article.html', {"articleText":"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis eveniet sit distinctio. Ab iste velit alias ratione accusantium quidem doloremque illum praesentium quos quaerat, distinctio sequi placeat? Ducimus, laboriosam dolore?"})
+      
     </div>
     <section class="section"> 
         <p class="title_name">Meet the team</p>
