added textarea in form

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
          @@include('./partials/team_card/_team_card.html', {"NameText":"Squawk", "PositionText":"Developer", "Img_src":"./img/squawk.png", 
          "Img_alt":"Developer", "DescrText":"Squawk is no social bunny. But when it comes to programming he stands out from the crowd."})
         </div>
-  
+    </section>
     <section class="section">
   
         <p class="title_name"> Send us a message...</p>
@@ -87,13 +87,13 @@
         </div>
         <div class=form_item>
           <label for="Message">Message:</label>
-          <input type="text" name="message">
+          <textarea name="message1"></textarea>
         </div>
         <button>
           Submit
         </button>
       </form>
-    </div>
+    </section>
   </main>
  <footer>
     <div class="container">
