--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./main.scss">
-    <title>First project</title>
-    <script src="./js/main.js" defer></script>
-  </head>
-  <body>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="./main.scss">
+  <title>First project</title>
+  <script src="./js/main.js" defer></script>
+</head>
+
+<body>
+  <header class="header">
+    Header
+  </header>
+  <main class="main">
+    Main content
+  </main>
+  <footer class="footer">
+    Footer
+  </footer>
+  <!--<div class="wrapper">
+    <div class="modal">
+      <div class="text">
+        Lorem ipsum dolor sit amet consectetur adipisicing 
+        elit. Dolor culpa assumenda sed, accusamus,
+         eos perferendis placeat iste ab ex id adipisci
+          autem suscipit nisi velit ad non similique obcaecati cumque?
+      </div>
+    </div>
+  </div>-->
+</body>
+
 </html>
-
-
-
-
