--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,25 @@
     Header
   </header>
   <main class="main">
-    Main content
+    Main content 
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
+      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quidem illum, odit sint veritatis illo quaerat, asperiores ab in unde assumenda excepturi? Ullam vero est facilis ipsum quia quasi, aspernatur asperiores!
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, delectus? Eligendi recusandae facere, mollitia ullam nesciunt deserunt molestiae. Quo similique laudantium harum non magni labore quas, esse reprehenderit consequuntur id?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque inventore tenetur iusto consequuntur aliquid facilis eveniet sequi fuga totam ipsum atque optio temporibus reiciendis hic, quis voluptates repudiandae accusantium similique!
   </main>
   <footer class="footer">
     Footer
