--- a/src/index.html
+++ b/src/index.html
@@ -43,16 +43,17 @@
         <p>contact</p>
       </a>
     </nav>
-   
-      <ul class="menu_hidden">
-        <li class="menu_item">Home</li>
+   <div class="menu_hidden">
+    
+      <ul class="menu_content">
+        <li class="menu_item"><a href="tut.by">Home</a></li>
         <li class="menu_item">About</li>
         <li class="menu_item">Work</li>
         <li class="menu_item">Blog</li>
         <li class="menu_item">Contact</li>
       </ul>
-    </div>
-
+   </div>
+  </div>
   </header>
 
     
