makes adaptive design

--- a/src/index.html
+++ b/src/index.html
@@ -22,31 +22,31 @@
     </div>
 
     <nav>
-      <a class="nav_item" href="">
-        <img src="./img/home-icon.png" alt="Home">
+      <a class="nav-item" href="">
+        <div class="home-logo margin-center"></div>
         <p>home</p>
       </a>
-      <a class="nav_item" href="">
-        <img src="./img/about-icon.png" alt="about">
+      <a class="nav-item" href="">
+        <div class="about-logo margin-center"></div>
         <p>about</p>
       </a>
-      <a class="nav_item" href="">
-        <img src="./img/work-icon.png" alt="work">
+      <a class="nav-item" href="">
+        <div class="work-logo margin-center"></div>
         <p>work</p>
       </a>
-      <a class="nav_item" href="">
-        <img src="./img/blog-icon.png" alt="blog">
+      <a class="nav-item" href="">
+        <div class="blog-logo margin-center"></div>
         <p>blog</p>
       </a>
-      <a class="nav_item" href="">
-        <img src="./img/contact-icon.png" alt="contact">
+      <a class="nav-item" href="">
+        <div class="contact-logo margin-center"></div>
         <p>contact</p>
       </a>
     </nav>
    <div class="menu_hidden">
     
       <ul class="menu_content">
-        <li class="menu_item"><a href="tut.by">Home</a></li>
+        <li class="menu_item">Home</li>
         <li class="menu_item">About</li>
         <li class="menu_item">Work</li>
         <li class="menu_item">Blog</li>
