--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
   
         <p class="title_name"> Send us a message...</p>
       
-      <form>
+      <form class="clearfix">
         <div class=form_item>
           <label for="name">Name:</label>
           <input type="text" id="name" name="user_name">
@@ -101,7 +101,7 @@
           <label for="Message">Message:</label>
           <textarea name="message1"></textarea>
         </div>
-        <button>
+        <button">
           Submit
         </button>
       </form>
