--- a/src/index.html
+++ b/src/index.html
@@ -101,7 +101,7 @@
           <label for="Message">Message:</label>
           <textarea name="message1"></textarea>
         </div>
-        <button">
+        <button>
           Submit
         </button>
       </form>
