--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./main.scss">
-    <title>First project</title>
+    <title>Sports news</title>
     <script src="./js/main.js" defer></script>
   </head>
   <body>
+    <div class="container">
+      <main>
+        main
+      </main>
+      <aside>
+        aside
+      </aside>
+
+      <footer>
+          footer
+      </footer>
+    </div>
   </body>
 </html>
 
