--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,22 @@
   <body>
     <div class="container">
       <main>
-        main
+        <div class="nav">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <div class="carousel">
+            
+        </div>
+        <div class="main-news">
+
+        </div>
+        <div class="last-column">
+          
+        </div>
       </main>
       <aside>
         aside
@@ -22,7 +37,3 @@
     </div>
   </body>
 </html>
-
-
-
-
